@@ -35,6 +35,12 @@ Default is false.
 .IP
 
 .TP
+\fBDisableHooks\fR
+Comma separated list of hook types to disable.
+.sp
+Default: allow all hooks.
+
+.TP
 \fBRunTimeCreate\fR
 Pattern for OCI runtime create operation.  See the section \fBOCI Pattern\fR
 for details on pattern replacement.
